backup/backup2/actinium/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actinium
  namespace: actinium
  labels:
    application: actinium
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000 
  selector:
    application: actinium
