backup/backup2/actinium/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: actinium
  namespace: actinium
spec:
  rules:
    - host: actinium.minikube
      http:
        paths:
          - backend:
              serviceName: actinium
              servicePort: 5000
